# vitagraph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONATE.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPONSORS.md  VitaGraph_White_Paper.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml  tests.yml
benchmarks/: README.md  bench_pipeline.py
data/: README.md
docs/: METHODOLOGY.md  ROADMAP.md  architecture.md  index.md
docs/api/: bio_age_estimator.md  bio_signal_processor.md  cli.md  config.md  index.md  knowledge_graph.md  pipeline.md  synthetic_data.md  visualization.md
docs/architecture/: architecture.drawio
docs/whitepaper/: README.md  VitaGraph_White_Paper.md  build_pdf.sh  whitepaper.css
examples/: README.md  cli_demo.py  generate_dataset.py  train_model.py  visualize_graph.py
models/: README.md
notebooks/: Examples.ipynb  Research.ipynb  Tutorial.ipynb
src/vitagraph/: __init__.py  bio_age_estimator.py  bio_signal_processor.py  cli.py  config.py  exceptions.py  knowledge_graph.py  logging_config.py  pipeline.py  synthetic_data.py  visualization.py
tests/: conftest.py  test_bio_age_estimator.py  test_bio_signal_processor.py  test_knowledge_graph.py  test_pipeline.py  test_synthetic_data.py
wiki/: Architecture.md  FAQ-and-Troubleshooting.md  Getting-Started.md  Home.md  Methodology-and-Scope.md  README.md  _Sidebar.md
